--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
