--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.26.9",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "axios": "^1.7.9",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.5",
     "sass": "^1.85.1",
     "zod": "^3.24.2"
   },
